# Multi-Threaded-Robot-Telemetry

./: .gitignore  CMakeLists.txt  README.md
include/: SensorModule.hpp
src/: SensorModule.cpp  main.cpp
tests/: test_sensor.cpp
